--- a/Code/templates/planets/jupiter.html
+++ b/Code/templates/planets/jupiter.html
@@ -46,8 +46,11 @@
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
         <div class="modal-content">
-            <h2>OBJECT 1</h2>
-            <p>Description</p>
+            <h2>Jupiter's south pole</h2>
+            <p>
+              Kidnap yourself on an adventure in the land of "1000 cyclones", where you will be able to see for yourself how diverse the surface of this gas giant can be!
+              These oval-shaped structures, visible in the featured image, have a diameter of about 1000km and you will be able to see each of them up close and personal!
+              </p>
             <button onclick="closeModal('modal1')">Close</button>
         </div>
     </div>
@@ -55,9 +58,11 @@
     <div class="modal" id="modal2">
         <div class="modal-content">
           <ul>
-            <li>First fact</li>
-            <li>Second fact</li>
-            <li>Third fact</li>
+            <li>Wind gusts more than 400 km/h, A hurricane that has lasted for more than 150 years.</li>
+            <li>The Red Spot is an anticyclone, meaning that it rotates counterclockwise</li>
+            <li>It is postulated that a photochemical reaction is responsible for the color of the anticyclone, which produces a characteristically red chemical compound when exposed to UV light</li>
+            <li>An anticyclone the size of the Earth, which far exceeds in strength the most powerful terrestrial cataclysms of this type</li>
+            <li>Hurry, because every year this anticyclone gets smaller and smaller – it’s a limited offer!</li>
           </ul>
             <button onclick="closeModal('modal2')">Close</button>
         </div>
@@ -65,8 +70,11 @@
 
     <div class="modal" id="modal3">
         <div class="modal-content">
-            <h2>Okno Modalne 3</h2>
-            <p>To jest zawartość okna modalnego 3.</p>
+            <ul>
+              <li>Average temperature of Jupiter's surface layers: -110 °C</li>
+              <li>Average pressure in the upper layers of the atmosphere: 30 to 50 kPa</li>
+              <li>Average wind speed in the upper layers of the atmosphere: 360km/h</li>     
+            </ul>
             <button onclick="closeModal('modal3')">Close</button>
         </div>
     </div>
@@ -74,9 +82,11 @@
     <div class="modal" id="modal4">
         <div class="modal-content">
             <ul>
-              <li>First number</li>
-              <li>Second number</li>
-              <li>Third number</li>
+              <li>The shortest day in the solar system (only 9.93h), the Jovian year takes 11.86 Earth years</li>
+              <li>ow many Earths can fit inside Jupiter: 1,321</li>
+              <li>How many Earth masses is one Jupiter mass: 318 </li>
+              <li>Distance to the sun: 5.1 AU (1 AU = 149 597 871 km)</li>
+              <li>Planet composition (by volume): 89% hydrogen; 10% helium; 1% of other gasses</li>
             </ul>
             <button onclick="closeModal('modal4')">Close</button>
         </div>
