--- a/Code/templates/planets/mars.html
+++ b/Code/templates/planets/mars.html
@@ -46,8 +46,12 @@
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
         <div class="modal-content">
-            <h2>OBJECT 1</h2>
-            <p>Description</p>
+            <h2>Crown of the Tharsis Highlands</h2>
+            <p>Join the greatest mountain adventure of all time, which outshines even the Himalayas with its challenges! Conquer some of the highest peaks on Mars (Ascraeus Mons, Pavonis Mons, Arsia Mons, and Olympus Mons) and conquer elevations of up to 15 km and climb to the limits of the Red Planet's atmosphere yourself, reaching the top of the Solar System!</p>
+            <h2>Geological adventure in Valles Marineris </h2>
+            <p>Kidnap yourself to explore the most magnificent canyon of the Solar System! Together with our office, you'll have the chance to examine the sedimentary rocks yourself, formed by millions of years of once-flowing water. Who knows, maybe you will be the first to find fossilized life on Mars!</p>
+            <h2>The cool climate of Mars' poles</h2>
+            <p>It is on this planet that you have the opportunity to feel what it means to stand on carbon dioxide! Feel for yourself what it means to walk or ride on dry ice by visiting our polar stations in the Planum Boreum and Planum Australe highlands.</p>
             <button onclick="closeModal('modal1')">Close</button>
         </div>
     </div>
@@ -55,9 +59,9 @@
     <div class="modal" id="modal2">
         <div class="modal-content">
           <ul>
-            <li>First fact</li>
-            <li>Second fact</li>
-            <li>Third fact</li>
+            <li>Valles Marineris - The largest canyon in the entire solar system! Each of its dimensions is impressive: 4000km long, up to 200km wide, and plunges up to 10km! On the slopes of this formation, countless sedimentary layers hide the secrets of the Red Planet's past - waiting for you to discover them!</li>
+            <li>Olympus Mons - is the largest volcanic cone and at the same time the highest elevation in the solar system, rising to a height of 26 km and with an area the size of Poland! Conquer the real Olympus itself, a place worthy of the residence of the Greek gods! </li>
+            <li>A moon doomed to destruction - Mars currently has two moons: Phobos and Deimos. Due to its unstable orbit, the first is heading for a collision with the Martian surface. Before it does, it will be torn apart by the Red Planet's gravitational forces, and in 50 million years its remains will form rings, similar to those we are currently observing near Saturn.</li>
           </ul>
             <button onclick="closeModal('modal2')">Close</button>
         </div>
@@ -65,8 +69,11 @@
 
     <div class="modal" id="modal3">
         <div class="modal-content">
-            <h2>Okno Modalne 3</h2>
-            <p>To jest zawartość okna modalnego 3.</p>
+            <ul>
+              <li>Average temperature of Jupiter's surface layers: -110 °C</li>
+              <li>Average pressure in the upper layers of the atmosphere: 30 to 50 kPa </li>
+              <li>Average wind speed in the upper layers of the atmosphere: 360km/h</li>
+            </ul>
             <button onclick="closeModal('modal3')">Close</button>
         </div>
     </div>
@@ -74,9 +81,10 @@
     <div class="modal" id="modal4">
         <div class="modal-content">
             <ul>
-              <li>First number</li>
-              <li>Second number</li>
-              <li>Third number</li>
+              <li>FA day on Mars: 24.66h, a year on Mars lasts 779 Earth days</li>
+              <li>How many Earths can fit inside Mars: 0.151 Earths</li>
+              <li>How many Earth masses is one Mars mass: 0.107 Earths</li>
+              <li>Distance to the sun:  1.66 AU (1 AU = 149 597 871 km)</li>
             </ul>
             <button onclick="closeModal('modal4')">Close</button>
         </div>
@@ -84,10 +92,10 @@
 
     <div class="modal" id="modal5">
         <div class="modal-content">
-            <figure>
-              <img src="../../static/planets/mars.jpg" alt="mars">
-              <figcaption>Description</figcaption>
-            </figure>
+            <ul>
+              <li>Average Martian surface temperature: varies from -110 to 35°C</li>
+              <li>Average atmospheric pressure: 0.638 kPa</li>
+            </ul>
             <button onclick="closeModal('modal5')">Close</button>
         </div>
     </div>
