--- a/Code/templates/planets/mercury.html
+++ b/Code/templates/planets/mercury.html
@@ -46,8 +46,8 @@
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
         <div class="modal-content">
-            <h2>OBJECT 1</h2>
-            <p>Description</p>
+            <h2>Wandering 'Nomad' hotel </h2>
+            <p>Are you tired of stationary accommodation? Want your view from the window to change from hour to hour? Welcome to the "Nomad" hotel on the surface of Mercury! Due to the extreme temperatures prevailing on the illuminated part of the planet, our residence is constantly moving in such a way that its guests always remain in the relatively pleasant semi-shade of our daily star.</p>
             <button onclick="closeModal('modal1')">Close</button>
         </div>
     </div>
@@ -55,9 +55,8 @@
     <div class="modal" id="modal2">
         <div class="modal-content">
           <ul>
-            <li>First fact</li>
-            <li>Second fact</li>
-            <li>Third fact</li>
+            <li>A hot and cold planet - due to its too-small mass and too-high surface temperature, Mercury cannot support its atmosphere, so the pressure at the surface is only 0.5 nPa. Among other reasons, it is precisely because of the lack of an atmosphere that Mercury has the highest temperature amplitude in the solar system - on the side not illuminated by the Sun, the temperature falls below -176 °C. In contrast, on the illuminated side, it rises to 427 °C! </li>
+            <li>Planet of composers, painters, and poets - the craters on the moons and planets of the solar system are mostly named in various ways. On Mercury, the craters are named after... outstanding artists of all time! Therefore, when visiting the surface of Mercury, you will visit the crater of Rembrandt, Mozart, or Goethe, among others.</li>
           </ul>
             <button onclick="closeModal('modal2')">Close</button>
         </div>
@@ -65,8 +64,10 @@
 
     <div class="modal" id="modal3">
         <div class="modal-content">
-            <h2>Okno Modalne 3</h2>
-            <p>To jest zawartość okna modalnego 3.</p>
+            <ul>
+                <li>Mercury's average surface temperature varies from -176 to 427°C </li>
+                <li> Average atmospheric pressure: 0.5 nPa</li>
+            </ul>
             <button onclick="closeModal('modal3')">Close</button>
         </div>
     </div>
@@ -74,9 +75,10 @@
     <div class="modal" id="modal4">
         <div class="modal-content">
             <ul>
-              <li>First number</li>
-              <li>Second number</li>
-              <li>Third number</li>
+              <li>A day on Mercury: 59 Earth days, a year on Mercury lasts 88 Earth days</li>
+              <li>How many Earths can fit inside Mercury? Only 0.056 Earth volumes</li>
+              <li>How many Earth masses is one Mercury mass? Only 0.055 of the Earth's mass</li>
+              <li>Distance to the Sun: 0.4 AU (1 AU = 149 597 871 km)</li>
             </ul>
             <button onclick="closeModal('modal4')">Close</button>
         </div>
