--- a/Code/templates/planets/neptune.html
+++ b/Code/templates/planets/neptune.html
@@ -46,8 +46,10 @@
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
         <div class="modal-content">
-            <h2>OBJECT 1</h2>
-            <p>Description</p>
+            <h2>Journey to the limits of understanding</h2>
+            <p>With our travel agency you have the opportunity to reach the last, well-known limits of the solar system, our home. It is in Neptune's orbit that you can best feel what it means to be "between the stars" because the Sun in Neptune's orbit is 1/30 the size of the Sun visible from Earth's orbit! This also affects the brightness of our star - it is 900 times fainter in Neptune's orbit!</p>
+            <h2>Flying in a stratospheric balloon full of excitement! </h2>
+            <p>For those with a thirst for excitement, our office offers one such opportunity in the entire solar system to feel what it means to "sail" in an ocean of gaseous hydrogen in supersonic gusts of wind on board the specially prepared aircraft "Boreas Prime"!</p>
             <button onclick="closeModal('modal1')">Close</button>
         </div>
     </div>
@@ -55,9 +57,8 @@
     <div class="modal" id="modal2">
         <div class="modal-content">
           <ul>
-            <li>First fact</li>
-            <li>Second fact</li>
-            <li>Third fact</li>
+            <li>The windiest planet - Uranus and Neptune are very similar in structure and chemical composition, but Neptune has much more dynamic weather systems than its twin planet. Extreme winds (reaching speeds of up to 2,200 km/h are created by the planet's internal heat. Compared to Uranus, Neptune emits more than twice as much energy into space, which significantly affects weather systems in the higher layers of the atmosphere. The source of internal heating also makes Neptune warmer than Uranus, despite being 10 astronomical units further from the Sun!</li>
+            <li>The coldest object in the solar system - although Neptune itself is not among the coldest objects, its largest moon holds the title of the coldest object, even beating Uranus' record! Triton's temperature was found to be an alarming -235 °C! Also, in addition to being the coldest, this moon is one of the strongest. This is due to its unusual orbital motion around the Ice Giant, as Triton orbits in opposite motion to Neptune's other natural satellites. It is theorized that Triton was not a moon of the Ice Giant from the beginning but could have been a 'stray' planet that was 'intercepted' by Neptune with its gravitational field and began to orbit around it in this way.</li>
           </ul>
             <button onclick="closeModal('modal2')">Close</button>
         </div>
@@ -65,8 +66,11 @@
 
     <div class="modal" id="modal3">
         <div class="modal-content">
-            <h2>Okno Modalne 3</h2>
-            <p>To jest zawartość okna modalnego 3.</p>
+            <ul>
+              <li>The average temperature in Neptune's upper atmosphere: -201 °C</li>
+              <li>The average pressure in the upper layers of the atmosphere:  ~100 kPa</li>
+              <li>Average wind speed in the upper layers of the atmosphere: 2200 km/h</li>
+            </ul>
             <button onclick="closeModal('modal3')">Close</button>
         </div>
     </div>
@@ -74,9 +78,11 @@
     <div class="modal" id="modal4">
         <div class="modal-content">
             <ul>
-              <li>First number</li>
-              <li>Second number</li>
-              <li>Third number</li>
+              <li>Day on Neptune: 16.1h, a Neptunian year takes 164.8 Earth years</li>
+              <li>How many Earths can fit inside Neptune: 57</li>
+              <li>How many Earth masses is one Neptune mass: 17</li>
+              <li>Distance to the sun: 30.1 AU (1 AU = 149 597 871 km)</li>
+              <li>Planet composition (by volume): 80% hydrogen; 19% helium; 1.5% methane; 0.02% other gasses</li>
             </ul>
             <button onclick="closeModal('modal4')">Close</button>
         </div>
