--- a/Code/templates/planets/saturn.html
+++ b/Code/templates/planets/saturn.html
@@ -46,8 +46,15 @@
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
         <div class="modal-content">
-            <h2>OBJECT 1</h2>
-            <p>Description</p>
+            <h2>The hexagonal north pole! </h2>
+            <p>Do you miss the regularity of natural planetary landscapes? Want to see something mysterious and unrepeatable? We invite you to Saturn's North Pole, where you won't experience water snow, but an extremely regular hexagonal-shaped storm! Thanks to us, you can see it for yourself from the deck of our orbital hotel "Ringtopia", which is located at an altitude of 1,000 km above Saturn's atmosphere. </p>
+            <h2>The strongest lightning in the solar system</h2>
+            <p>Are you a true storm hunter? Are you not afraid of lightning and thunder and are even attracted to it? Then Saturn is just the place for you! Here you will experience with your own eyes the largest and most powerful lightning bolts that can be seen near our daily star!
+              The thunderstorms here generate discharges up to 10,000 times more powerful than those on our home planet!</p>
+            <h2>The majestic rings of the gas giant </h2>
+            <p>Have you ever observed Saturn's rings through a telescope? Have you dreamt of seeing them up close? To have them at your fingertips? Then this excursion is for you! 
+              With us you will be able to view them from the Cassini gap, which cuts through this formation with a space width of 4,700 km, and the ring system itself extends over 280,000 km from the planet's surface! (That's more than 2/3 the distance from the Earth to the Moon!)
+              </p>
             <button onclick="closeModal('modal1')">Close</button>
         </div>
     </div>
@@ -55,9 +62,7 @@
     <div class="modal" id="modal2">
         <div class="modal-content">
           <ul>
-            <li>First fact</li>
-            <li>Second fact</li>
-            <li>Third fact</li>
+            <li>Saturn's countless moons - More than 60 are known and named, but Saturn is known to have more than 140 natural satellites, making it the planet with the most moons in the solar system.</li>
           </ul>
             <button onclick="closeModal('modal2')">Close</button>
         </div>
@@ -65,8 +70,11 @@
 
     <div class="modal" id="modal3">
         <div class="modal-content">
-            <h2>Okno Modalne 3</h2>
-            <p>To jest zawartość okna modalnego 3.</p>
+            <ul>
+              <li>Average temperature of Saturn's surface layers:  -176 °C</li>
+              <li>Average pressure in the upper layers of the atmosphere:  140 kPa</li>
+              <li>Average wind speed in the upper layers of the atmosphere: 1800 km/h</li>
+            </ul>
             <button onclick="closeModal('modal3')">Close</button>
         </div>
     </div>
@@ -74,9 +82,10 @@
     <div class="modal" id="modal4">
         <div class="modal-content">
             <ul>
-              <li>First number</li>
-              <li>Second number</li>
-              <li>Third number</li>
+              <li>A day on Saturn: 10.7h, a Saturnian year takes 29.45 Earth years</li>
+              <li>How many Earths can fit inside Saturn: 764</li>
+              <li>Distance to the sun: 9.5 AU (1 AU = 149 597 871 km)</li>
+              <li>Planet composition (by volume): 96.3% hydrogen; 3.25% helium; less than 0.5% of other gasses</li>
             </ul>
             <button onclick="closeModal('modal4')">Close</button>
         </div>
