--- a/Code/templates/planets/venus.html
+++ b/Code/templates/planets/venus.html
@@ -46,8 +46,8 @@
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
         <div class="modal-content">
-            <h2>OBJECT 1</h2>
-            <p>Description</p>
+            <h2>A city in the clouds</h2>
+            <p>About to explore the entire solar system, but worried about the conditions on Venus? Rest assured, our habitat is far from the extreme conditions of this rocky planet - the residents of our hotel have their heads high in the clouds! Here, at an altitude of 50 km above the surface of the second planet from the sun, atmospheric conditions are similar to those on Earth - the pressure is equal to 1 atm and the temperature does not exceed 50°C. Inside our sky hotels, you can relax without any worries!</p>
             <button onclick="closeModal('modal1')">Close</button>
         </div>
     </div>
@@ -55,9 +55,8 @@
     <div class="modal" id="modal2">
         <div class="modal-content">
           <ul>
-            <li>First fact</li>
-            <li>Second fact</li>
-            <li>Third fact</li>
+            <li>Hell's Planet - from astronomical observations, one might conclude that Venus is a planet similar to our own - similar mass, size, and distance from the sun. Opinion of this planet changed completely when the soviet Venus missions reached the surface shrouded in dense clouds - there they found a volcanic landscape and pressures equal to those in the depths of Earth's oceans. </li>
+            <li>A warning for Earth - it is postulated that the surface of Venus was not always such an unfriendly environment for life, in the distant past much more pleasant conditions may have prevailed near the surface of this planet. The extremely strong greenhouse effect is responsible for the current state - Venus' present atmosphere consists of more than 96% carbon dioxide, which, being a greenhouse gas, causes the so-called 'greenhouse effect'. This means that incident solar radiation radiating onto Venus causes this energy to be trapped near the surface of the planet, infinitely heating it. Let's keep this in mind so that we don't turn our own home into an inferno with inappropriate global warming decisions...</li>
           </ul>
             <button onclick="closeModal('modal2')">Close</button>
         </div>
@@ -65,8 +64,10 @@
 
     <div class="modal" id="modal3">
         <div class="modal-content">
-            <h2>Okno Modalne 3</h2>
-            <p>To jest zawartość okna modalnego 3.</p>
+            <ul>
+              <li>Average surface temperature on Venus: 464°C</li>
+              <li>Average atmospheric pressure: 9100 kPa</li>
+            </ul>
             <button onclick="closeModal('modal3')">Close</button>
         </div>
     </div>
@@ -74,9 +75,10 @@
     <div class="modal" id="modal4">
         <div class="modal-content">
             <ul>
-              <li>First number</li>
-              <li>Second number</li>
-              <li>Third number</li>
+              <li>Day on Venus: 243 Earth days, year on Venus lasts 225 Earth days</li>
+              <li>How many Earths can fit inside Venus: 0.815 Earths</li>
+              <li>How many Earth masses is one Venus mass: 0.857 Earths</li>
+              <li>Distance to the sun: 0.72 AU (1 AU = 149 597 871 km)</li>
             </ul>
             <button onclick="closeModal('modal4')">Close</button>
         </div>
