--- a/Code/templates/planets/uranus.html
+++ b/Code/templates/planets/uranus.html
@@ -46,39 +46,47 @@
     <!-- Okna modalne -->
     <div class="modal" id="modal1">
         <div class="modal-content">
-            <h2>OBJECT 1</h2>
-            <p>Description</p>
+            <h2>Experience for yourself how far away Uranus actually is</h2>
+            <p>With our excursion, you will see how small our daily star is from the perspective of a low Uranian orbit and what the upper layers of this planet's atmosphere look like up close. </p>
+            <h2>In the footsteps of Shakespeare's and Pope's characters</h2>
+            <p>The moons of Uranus are also very interesting objects, characterized by interesting surface textures as well as names! As you travel, you will have the opportunity to see the surface of Uranus' natural satellites, which got their name after characters from novels by eminent English poets.</p>
             <button onclick="closeModal('modal1')">Close</button>
-        </div>
-    </div>
-
-    <div class="modal" id="modal2">
-        <div class="modal-content">
-          <ul>
-            <li>First fact</li>
-            <li>Second fact</li>
-            <li>Third fact</li>
-          </ul>
-            <button onclick="closeModal('modal2')">Close</button>
-        </div>
-    </div>
-
-    <div class="modal" id="modal3">
-        <div class="modal-content">
-            <h2>Okno Modalne 3</h2>
-            <p>To jest zawartość okna modalnego 3.</p>
-            <button onclick="closeModal('modal3')">Close</button>
         </div>
     </div>
 
     <div class="modal" id="modal4">
         <div class="modal-content">
-            <ul>
-              <li>First number</li>
-              <li>Second number</li>
-              <li>Third number</li>
-            </ul>
+          <ul>
+            <li>A day on Uranus: 17h*, a Uranian year takes 84 Earth years</li>
+            <li>How many Earths can fit inside Uranus: 63</li>
+            <li>How many Earth masses is one Uranus mass: 14 </li>
+            <li>Distance to the sun: 19.8 AU (1 AU = 149 597 871 km)</li>
+            <li>Planet composition (by volume): 83% hydrogen; 15% helium; 2.3% methane; Less than 0.01% of other gasses</li>
+          </ul>
             <button onclick="closeModal('modal4')">Close</button>
+        </div>
+    </div>
+
+    <div class="modal" id="modal3">
+        <div class="modal-content">
+            <ul>
+              <li>Coldest Planet in the solar system, lowest temperature recorded: -224 °C</li>
+              <li>Average temperature of Uranus' surface layers:  -197 °C</li>
+              <li>Average pressure in the upper layers of the atmosphere:  130 kPa</li>
+              <li>Average wind speed in the upper layers of the atmosphere: 900 km/h</li>
+            </ul>
+            <button onclick="closeModal('modal3')">Close</button>
+        </div>
+    </div>
+
+    <div class="modal" id="modal2">
+  <div class="modal-content">
+            <ul>
+              <li>A peculiar day on Uranus - Uranus is extremely inclined with its rotation axis to the plane of the solar system, an angle of more than 90 degrees! This means that, in contrast to other planets, there is no sunset every revolution of the planet, but every 21 Earths’ years!</li>
+              <li>An icy planet with a hot interior - Uranus' mantle does not consist of the kind of ice known on Earth. The ice inside this bright blue planet is made up of hot water-ammonia ice, which is only formed by a pressure equal to 200 Barium, which prevails at a depth of about 300km. </li>
+              <li>Methane Blue - Methane, which is found in the atmosphere of this planet, is responsible for the characteristic color of Uranus. Due to the spectral characteristics of Methane, most of the spectrum of visible electromagnetic radiation is absorbed by this molecule. The only part of visible light that is not absorbed is blue light, which is what we have the chance to see when observing this ice giant. </li>
+            </ul>
+            <button onclick="closeModal('modal2')">Close</button>
         </div>
     </div>
 
