--- a/Code/templates/recomendations.html
+++ b/Code/templates/recomendations.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="../static/about.css">
     <link rel="stylesheet" type="text/css" href="../static/styles.css">
+    <script src="script.js"></script>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
@@ -29,8 +31,22 @@
     </div>
     
     <div style="padding-left:16px">
-      <h2>Top Navigation Example</h2>
-      <p>Some content..</p>
+        <main>
+            <article>
+                <div class="article">
+                    <div class="row">
+                        <img class="col" src="../static/planets/mercury.jpg" style = "width: 200px" >
+                        <div class="col">
+                            <h2>Name</h2>
+                            <p>Locations: Mercury</p>
+\                            <p class="summary">summary</p>
+                            <a href="" class="read-more-button">Read more</a>
+                            <a href="/is_loged_in" class="read-more-button">Reserve</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </main>
     </div>
     
     </body>
