--- a/Code/static/about.css
+++ b/Code/static/about.css
@@ -1,8 +1,8 @@
 /* Style for the article container */
 .article {
     margin-bottom: 20px;
-    border-bottom: 3px solid #ccc;
-    box-shadow: #888777;
+    border: 3px solid #ccc;
+    /* box-shadow: #888777; */
     padding: 20px;
 }
 
