--- a/Code/templates/planets/neptune.html
+++ b/Code/templates/planets/neptune.html
@@ -89,30 +89,89 @@
     </div>
 
     <div class="modal" id="modal5">
-        <div class="modal-content">
-            <figure>
-              <img src="../../static/planets/neptun.jpg" alt="neptune">
-              <figcaption>Description</figcaption>
-            </figure>
-            <button onclick="closeModal('modal5')">Close</button>
+      <div class="modal-content">
+        <div class="slideshow-container">
+          <!-- Slajdy -->
+          <div class="mySlides">
+              <img src="../../static/planets/mars.jpg" style="width: 100%;">
+          </div>
+  
+          <div class="mySlides">
+            <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+          </div>
+  
+          <div class="mySlides">
+            <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+          </div>
+  
+          <!-- Przyciski nawigacyjne -->
+          <a class="prev" onclick="plusSlides(-1)">Poprzedni</a>
+          <a class="next" onclick="plusSlides(1)">Następny</a>
+          <!-- Punkty pod slajdami -->
+          <div class="dot-container">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
         </div>
     </div>
-
+          <button onclick="closeModal('modal5')">Close</button>
+      </div>
   </div>
+
+</div>
 </div>
 <script>
-  // Funkcja otwierająca okno modalne
-  function openModal(modalId) {
-      var modal = document.getElementById(modalId);
-      modal.style.display = 'block';
+// Funkcja otwierająca okno modalne
+function openModal(modalId) {
+    var modal = document.getElementById(modalId);
+    modal.style.display = 'block';
+}
+
+// Funkcja zamykająca okno modalne
+function closeModal(modalId) {
+    var modal = document.getElementById(modalId);
+    modal.style.display = 'none';
+}
+
+//Funkcje pokazu slajdów
+let slideIndex = 1;
+  showSlides(slideIndex);
+
+  // Funkcja do przechodzenia do poprzedniego/następnego slajdu
+  function plusSlides(n) {
+      showSlides(slideIndex += n);
   }
 
-  // Funkcja zamykająca okno modalne
-  function closeModal(modalId) {
-      var modal = document.getElementById(modalId);
-      modal.style.display = 'none';
+  // Funkcja do przejścia do konkretnego slajdu po kliknięciu na punkt
+  function currentSlide(n) {
+      showSlides(slideIndex = n);
+  }
+
+  // Funkcja do wyświetlania slajdów
+  function showSlides(n) {
+      let i;
+      const slides = document.getElementsByClassName("mySlides");
+      const dots = document.getElementsByClassName("dot");
+
+      if (n > slides.length) {
+          slideIndex = 1;
+      }
+
+      if (n < 1) {
+          slideIndex = slides.length;
+      }
+
+      for (i = 0; i < slides.length; i++) {
+          slides[i].style.display = "none";
+      }
+
+      for (i = 0; i < dots.length; i++) {
+          dots[i].className = dots[i].className.replace(" active", "");
+      }
+
+      slides[slideIndex - 1].style.display = "block";
+      dots[slideIndex - 1].className += " active";
   }
 </script>
-
 </body>
 </html>
