--- a/Code/templates/recomendations.html
+++ b/Code/templates/recomendations.html
@@ -39,7 +39,7 @@
                         <div class="col">
                             <h2>Name</h2>
                             <p>Locations: Mercury</p>
-\                            <p class="summary">summary</p>
+                            <p class="summary">summary</p>
                             <a href="" class="read-more-button">Read more</a>
                             <a href="/is_loged_in" class="read-more-button">Reserve</a>
                         </div>
