--- a/Code/templates/planets/jupiter.html
+++ b/Code/templates/planets/jupiter.html
@@ -48,7 +48,7 @@
         <div class="modal-content">
             <h2>Jupiter's south pole</h2>
             <p>
-              Kidnap yourself on an adventure in the land of "1000 cyclones", where you will be able to see for yourself how diverse the surface of this gas giant can be!
+              Live through an adventure in the land of "1000 cyclones", where you will be able to see for yourself how diverse the surface of this gas giant can be!
               These oval-shaped structures, visible in the featured image, have a diameter of about 1000km and you will be able to see each of them up close and personal!
               </p>
             <button onclick="closeModal('modal1')">Close</button>
@@ -97,16 +97,25 @@
         <div class="slideshow-container">
           <!-- Slajdy -->
           <div class="mySlides">
-              <img src="../../static/planets/mars.jpg" style="width: 100%;">
+              <img src="../../static/planets/Jowisz/Jupiter South Pole.webp" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+            <img src="../../static/planets/Jowisz/Jupiter_-_Great_Red_Spot_-_PJ7-60_61_62_-_Balanced_(49803032983).png" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+            <img src="../../static/planets/Jowisz/The Red Spot.jpg" style="width: 100%;">
           </div>
+
+          <div class="mySlides">
+            <img src="../../static/planets/Jowisz/The Red Spot2.jpg" style="width: 100%;">
+          </div>
+
+          <div class="mySlides">
+            <img src="../../static/planets/Jowisz/giphy.gif" style="width: 100%;">
+          </div>
+  
   
           <!-- Przyciski nawigacyjne -->
           <a class="prev" onclick="plusSlides(-1)">Poprzedni</a>
