--- a/Code/templates/planets/mercury.html
+++ b/Code/templates/planets/mercury.html
@@ -89,15 +89,15 @@
         <div class="slideshow-container">
           <!-- Slajdy -->
           <div class="mySlides">
-              <img src="../../static/planets/mars.jpg" style="width: 100%;">
+              <img src="../../static/planets/Merkury/Mercury.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+            <img src="../../static/planets/Merkury/386889087_3579694198985958_7213633099174967198_n.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+            <img src="../../static/planets/Merkury/jpegPIA02438.jpg" style="width: 100%;">
           </div>
   
           <!-- Przyciski nawigacyjne -->
