--- a/Code/templates/planets/neptune.html
+++ b/Code/templates/planets/neptune.html
@@ -93,15 +93,15 @@
         <div class="slideshow-container">
           <!-- Slajdy -->
           <div class="mySlides">
-              <img src="../../static/planets/mars.jpg" style="width: 100%;">
+              <img src="../../static/planets/Neptun/Neptun.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+            <img src="../../static/planets/Neptun/Neptune_and_Triton.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+            <img src="../../static/planets/Neptun/New_Webb_Images_Capture_Rare_View_of_Neptune’s_Rings_(Labeled).png" style="width: 100%;">
           </div>
   
           <!-- Przyciski nawigacyjne -->
