--- a/Code/templates/planets/saturn.html
+++ b/Code/templates/planets/saturn.html
@@ -96,15 +96,15 @@
         <div class="slideshow-container">
           <!-- Slajdy -->
           <div class="mySlides">
-              <img src="../../static/planets/mars.jpg" style="width: 100%;">
+              <img src="../../static/planets/Saturn/PIA21611_-_Saturn_s_Hexagon_as_Summer_Solstice_Approaches.gif" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+            <img src="../../static/planets/Saturn/Saturn_and_rings.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+            <img src="../../static/planets/Saturn/jpegPIA09856.jpg" style="width: 100%;">
           </div>
   
           <!-- Przyciski nawigacyjne -->
