--- a/Code/templates/planets/uranus.html
+++ b/Code/templates/planets/uranus.html
@@ -95,15 +95,15 @@
         <div class="slideshow-container">
           <!-- Slajdy -->
           <div class="mySlides">
-              <img src="../../static/planets/mars.jpg" style="width: 100%;">
+              <img src="../../static/planets/Uran/Annotated_JWST_image_of_Uranus_moons.png" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+            <img src="../../static/planets/Uran/Uranus.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+            <img src="../../static/planets/Uran/Uranus_Moons.jpg" style="width: 100%;">
           </div>
   
           <!-- Przyciski nawigacyjne -->
