--- a/Code/templates/planets/mars.html
+++ b/Code/templates/planets/mars.html
@@ -49,7 +49,7 @@
             <h2>Crown of the Tharsis Highlands</h2>
             <p>Join the greatest mountain adventure of all time, which outshines even the Himalayas with its challenges! Conquer some of the highest peaks on Mars (Ascraeus Mons, Pavonis Mons, Arsia Mons, and Olympus Mons) and conquer elevations of up to 15 km and climb to the limits of the Red Planet's atmosphere yourself, reaching the top of the Solar System!</p>
             <h2>Geological adventure in Valles Marineris </h2>
-            <p>Kidnap yourself to explore the most magnificent canyon of the Solar System! Together with our office, you'll have the chance to examine the sedimentary rocks yourself, formed by millions of years of once-flowing water. Who knows, maybe you will be the first to find fossilized life on Mars!</p>
+            <p>Explore the most magnificent canyon of the Solar System! Together with our office, you'll have the chance to examine the sedimentary rocks yourself, formed by millions of years of once-flowing water. Who knows, maybe you will be the first to find fossilized life on Mars!</p>
             <h2>The cool climate of Mars' poles</h2>
             <p>It is on this planet that you have the opportunity to feel what it means to stand on carbon dioxide! Feel for yourself what it means to walk or ride on dry ice by visiting our polar stations in the Planum Boreum and Planum Australe highlands.</p>
             <button onclick="closeModal('modal1')">Close</button>
@@ -93,15 +93,27 @@
           <div class="slideshow-container">
             <!-- Slajdy -->
             <div class="mySlides">
-                <img src="../../static/planets/mars.jpg" style="width: 100%;">
+                <img src="../../static/planets/Mars/Annotated_JWST_image_of_Uranus_moons.png" style="width: 100%;">
             </div>
     
             <div class="mySlides">
-              <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+              <img src="../../static/planets/Mars/Olympus Mons1.jpg" style="width: 100%;">
             </div>
     
             <div class="mySlides">
-              <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+              <img src="../../static/planets/Mars/Olympus Mons2.jpg" style="width: 100%;">
+            </div>
+
+            <div class="mySlides">
+              <img src="../../static/planets/Mars/Valles_and_Tharsis.jpg" style="width: 100%;">
+            </div>
+
+            <div class="mySlides">
+              <img src="../../static/planets/Mars/Valles_Marineris1.jpg" style="width: 100%;">
+            </div>
+
+            <div class="mySlides">
+              <img src="../../static/planets/Mars/Valles_Marineris2.jpg" style="width: 100%;">
             </div>
     
             <!-- Przyciski nawigacyjne -->
@@ -112,6 +124,8 @@
               <span class="dot" onclick="currentSlide(1)"></span>
               <span class="dot" onclick="currentSlide(2)"></span>
               <span class="dot" onclick="currentSlide(3)"></span>
+              <span class="dot" onclick="currentSlide(4)"></span>
+              <span class="dot" onclick="currentSlide(5)"></span>
           </div>
       </div>
             <button onclick="closeModal('modal5')">Close</button>
