--- a/Code/templates/planets/venus.html
+++ b/Code/templates/planets/venus.html
@@ -89,15 +89,15 @@
         <div class="slideshow-container">
           <!-- Slajdy -->
           <div class="mySlides">
-              <img src="../../static/planets/mars.jpg" style="width: 100%;">
+              <img src="../../static/planets/Wenus/Venus.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/mercury.jpg" style="width: 100%;">
+            <img src="../../static/planets/Wenus/Venus_surface.jpg" style="width: 100%;">
           </div>
   
           <div class="mySlides">
-            <img src="../../static/planets/saturn.jpg" style="width: 100%;">
+            <img src="../../static/planets/Wenus/jpegPIA00245.jpg" style="width: 100%;">
           </div>
   
           <!-- Przyciski nawigacyjne -->
